# GameEngine

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt
include/: Errors.h  GLSLProgram.h  GLTexture.h  IOManager.h  ImageLoader.h  MainGame.h  ResourceManager.h  Sprite.h  TextureCache.h  Vertex.h  picoPNG.h
include/glad/: glad.h
samples/: CMakeLists.txt  main.cpp
shaders/: colorShading.frag  colorShading.vert
src/: Errors.cpp  GLSLProgram.cpp  IOManager.cpp  ImageLoader.cpp  MainGame.cpp  ResourceManager.cpp  Sprite.cpp  TextureCache.cpp  glad.c  picoPNG.cpp
